--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Gestisci e calcola i bancali, pacchi e spezzature.</p>
       </div>
 
-      <div class="card" onclick="location.href='./index3.html'">
+      <div class="card" onclick="location.href='./aindex3.html'">
         <img src="https://pbs.twimg.com/profile_images/954361805647896576/0rqHAcIK.jpg" alt="Altro Modulo">
         <h2>Calcolo Corriere</h2>
         <p>Accedi a un’altra sezione di gestione o analisi.</p>
